--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -7,6 +7,9 @@ $blue: #0078a8;
 $indigo: #004290;
 $white: #fcfcfc;
 
+$atlas-header-height: 32px;
+$mapZIndex: 1;
+
 $bootstrap-modal-margin: 1.75rem;
 
 $cho-filter-header-height: 30px;
