--- a/src/app/views/sidebar/sidebar.component.html
+++ b/src/app/views/sidebar/sidebar.component.html
@@ -9,5 +9,8 @@
 </div>
 
 <div class="offcanvas-body">
-    <app-atlas-filter [onActiveButtonResets]="onActiveButtonResets"></app-atlas-filter>
+    <app-atlas-filter
+        [onActiveButtonResets]="onActiveButtonResets"
+        [onToggleScore]="onToggleScore"
+    ></app-atlas-filter>
 </div>
