--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.html
@@ -20,18 +20,18 @@
             </ngb-panel>
         </ngb-accordion>
 
-        <ngb-accordion activeIds="atlas-filter-main-section">
-            <ngb-panel id="atlas-filter-main-section">
+        <ngb-accordion activeIds="atlas-filter-aggregated-section">
+            <ngb-panel id="atlas-filter-aggregated-section">
                 <ng-template ngbPanelTitle>
                     <div class="title">
-                        Main Filter
+                        Aggregated Filter
                     </div>
                     <button class="btn btn-link btn-reset-section" (click)="onSectionReset($event)">
                         Reset
                     </button>
                 </ng-template>
                 <ng-template ngbPanelContent>
-                    <app-atlas-filter-main-section></app-atlas-filter-main-section>
+                    <app-atlas-filter-aggregated-section></app-atlas-filter-aggregated-section>
                 </ng-template>
             </ngb-panel>
         </ngb-accordion>
