--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.scss
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter.component.scss
@@ -52,6 +52,12 @@
                             }
                         }
                     }
+
+                    .accordion-body {
+                        mat-form-field {
+                            width: 100%;
+                        }
+                    }
                 }
             }
 
