--- a/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter-main-section/individually/atlas-individually-filter.component.html
+++ b/src/app/views/atlas/sidebar-filter/atlas-filter/atlas-filter-main-section/individually/atlas-individually-filter.component.html
@@ -7,7 +7,7 @@
         </mat-select-trigger>
 
         <mat-optgroup
-            *ngFor="let dimension of atlasFilter.baseFilter.qoliOptions.aggregators"
+            *ngFor="let dimension of atlasFilter.baseFilter.qoliIndividuallyOptions.aggregators"
             class="custom-optgroup"
             [label]="dimension.label"
         >
