--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -12,12 +12,14 @@ $mapZIndex: 1;
 
 $bootstrap-modal-margin: 1.75rem;
 
-$cho-filter-header-height: 30px;
-$cho-filter-padding: 16px; // 1rem // var(--bs-offcanvas-padding-y);
-$cho-filter-header-box: $cho-filter-header-height + (2 * $cho-filter-padding);
+$sidebar-filter-padding: 16px; // 1rem // var(--bs-offcanvas-padding-y);
+$sidebar-width: 400px; // var(--bs-offcanvas-width);
+$sidebar-padding: 16px; // 1rem // var(--bs-offcanvas-padding-y)
 
-$offcanvas-width: 400px; // var(--bs-offcanvas-width);
-$offcanvas-padding: 16px; // 1rem // var(--bs-offcanvas-padding-y)
+/** @deprecated */
+$sidebar-filter-header-height: 30px;
+/** @deprecated */
+$sidebar-filter-header-box: $sidebar-filter-header-height + (2 * $sidebar-filter-padding);
 
 $size-xxsmall: 2px;
 $size-xsmall: 4px;
