--- a/src/app/views/stats/stats-screen.component.html
+++ b/src/app/views/stats/stats-screen.component.html
@@ -4,8 +4,42 @@
 </div>
 
 <div class="modal-body d-flex gap-4">
-    <div class="global-filter">
-        TODO: filter
+    <div class="filter-box">
+        <div class="global-filter">
+            <button [ngClass]="{'btn btn-counter': true, disabled: true}">
+                Results: {{ sidebarFilter.form.value['countries']?.length }} countries
+            </button>
+
+            <form class="needs-validation" [formGroup]="sidebarFilter.form">
+                <ngb-accordion activeIds="sidebar-main-section">
+                    <ngb-panel id="sidebar-main-section">
+                        <ng-template ngbPanelTitle>
+                            <div class="title">
+                                {{ sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.AGGREGATE ? 'Aggregated Filter' : '' }}
+                                {{ sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.INDIVIDUALLY ? 'Individually Filter' : '' }}
+                            </div>
+                            <button class="btn btn-link btn-reset-section" (click)="onSectionReset($event)">
+                                Reset
+                            </button>
+                        </ng-template>
+                        <ng-template ngbPanelContent>
+                            <app-atlas-base-filter></app-atlas-base-filter>
+                            <app-aggregated-filter *ngIf="sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.AGGREGATE"></app-aggregated-filter>
+                            <app-atlas-individually-filter *ngIf="sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.INDIVIDUALLY"></app-atlas-individually-filter>
+                        </ng-template>
+                    </ngb-panel>
+                </ngb-accordion>
+
+                <div class="form-footer">
+                    <button class="btn btn-md btn-success" type="submit" (click)="onFilterApply()" [disabled]="sidebarFilter.isDisabled()">
+                        Apply Filter
+                    </button>
+                    <button class="btn btn-md btn-secondary" type="submit" (click)="onReset()">
+                        Reset Filter
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 
     <div class="content">
