--- a/src/app/views/stats/stats-screen.component.html
+++ b/src/app/views/stats/stats-screen.component.html
@@ -18,7 +18,7 @@
                                 {{ sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.AGGREGATE ? 'Aggregated Filter' : '' }}
                                 {{ sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.INDIVIDUALLY ? 'Individually Filter' : '' }}
                             </div>
-                            <button class="btn btn-link btn-reset-section" (click)="onSectionReset($event)">
+                            <button class="btn btn-link btn-reset-section" (click)="filterService.onSectionReset($event)">
                                 Reset
                             </button>
                         </ng-template>
@@ -31,10 +31,10 @@
                 </ngb-accordion>
 
                 <div class="form-footer">
-                    <button class="btn btn-md btn-success" type="submit" (click)="onFilterApply()" [disabled]="sidebarFilter.isDisabled()">
+                    <button class="btn btn-md btn-success" type="submit" (click)="filterService.onFilterApply()" [disabled]="sidebarFilter.isDisabled()">
                         Apply Filter
                     </button>
-                    <button class="btn btn-md btn-secondary" type="submit" (click)="onReset()">
+                    <button class="btn btn-md btn-secondary" type="submit" (click)="filterService.onReset()">
                         Reset Filter
                     </button>
                 </div>
@@ -44,10 +44,8 @@
 
     <div class="content">
         <br />
-        TODO: chart
-        <br /><br /><br />
-        TODO: chart
-        <br /><br /><br />
-        TODO: chart
+        <div class="chart-container">
+            <canvas id="stats" >{{ chart }}</canvas>
+        </div>
     </div>
 </div>
