--- a/src/app/views/stats/stats-screen.component.scss
+++ b/src/app/views/stats/stats-screen.component.scss
@@ -14,5 +14,17 @@
             }
         }
     }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        width: calc(100% - #{$filter-box-body-width} - 2 * #{$size-medium});
+
+        > .chart-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
