--- a/src/app/shared/filter/main-section/individually/individually-filter.component.html
+++ b/src/app/shared/filter/main-section/individually/individually-filter.component.html
@@ -1,13 +1,13 @@
-<mat-form-field [formGroup]="sidebarFilter.form">
+<mat-form-field [formGroup]="filter.form">
     <mat-label>Quality of Life Index</mat-label>
 
     <mat-select formControlName="selectedIndicator" placeholder="No indicator is selected">
         <mat-select-trigger>
-            {{ sidebarFilter.individuallyFilter.unsavedIndicator.label }}
+            {{ filter.individuallyFilter.unsavedIndicator.label }}
         </mat-select-trigger>
 
         <mat-optgroup
-            *ngFor="let dimension of sidebarFilter.baseFilter.qoliIndividuallyOptions.aggregators"
+            *ngFor="let dimension of filter.baseFilter.qoliIndividuallyOptions.aggregators"
             class="custom-optgroup"
             [label]="dimension.label"
         >
