--- a/src/app/views/stats/base/base-stats-screen.component.html
+++ b/src/app/views/stats/base/base-stats-screen.component.html
@@ -7,16 +7,16 @@
     <div class="filter-box">
         <div class="global-filter">
             <button [ngClass]="{'btn btn-counter': true, disabled: true}">
-                Results: {{ sidebarFilter.form.value['countries']?.length }} countries
+                Results: {{ filter.form.value['countries']?.length }} countries
             </button>
 
-            <form class="needs-validation" [formGroup]="sidebarFilter.form">
+            <form class="needs-validation" [formGroup]="filter.form">
                 <ngb-accordion activeIds="sidebar-main-section">
                     <ngb-panel id="sidebar-main-section">
                         <ng-template ngbPanelTitle>
                             <div class="title">
-                                {{ sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.AGGREGATE ? 'Aggregated Filter' : '' }}
-                                {{ sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.INDIVIDUALLY ? 'Individually Filter' : '' }}
+                                {{ filter.form.value['analysisType'] === ANALYSIS_TYPE.AGGREGATE ? 'Aggregated Filter' : '' }}
+                                {{ filter.form.value['analysisType'] === ANALYSIS_TYPE.INDIVIDUALLY ? 'Individually Filter' : '' }}
                             </div>
                             <button class="btn btn-link btn-reset-section" (click)="filterService.onSectionReset($event)">
                                 Reset
@@ -24,14 +24,14 @@
                         </ng-template>
                         <ng-template ngbPanelContent>
                             <app-atlas-base-filter></app-atlas-base-filter>
-                            <app-aggregated-filter *ngIf="sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.AGGREGATE"></app-aggregated-filter>
-                            <app-atlas-individually-filter *ngIf="sidebarFilter.form.value['analysisType'] === ANALYSIS_TYPE.INDIVIDUALLY"></app-atlas-individually-filter>
+                            <app-aggregated-filter *ngIf="filter.form.value['analysisType'] === ANALYSIS_TYPE.AGGREGATE"></app-aggregated-filter>
+                            <app-atlas-individually-filter *ngIf="filter.form.value['analysisType'] === ANALYSIS_TYPE.INDIVIDUALLY"></app-atlas-individually-filter>
                         </ng-template>
                     </ngb-panel>
                 </ngb-accordion>
 
                 <div class="form-footer">
-                    <button class="btn btn-md btn-success" type="submit" (click)="filterService.onFilterApply()" [disabled]="sidebarFilter.isDisabled()">
+                    <button class="btn btn-md btn-success" type="submit" (click)="filterService.onFilterApply()" [disabled]="filter.isDisabled()">
                         Apply Filter
                     </button>
                     <button class="btn btn-md btn-secondary" type="submit" (click)="filterService.onReset()">
