--- a/src/app/views/stats/stats-screen.component.html
+++ b/src/app/views/stats/stats-screen.component.html
@@ -23,7 +23,7 @@
                             </button>
                         </ng-template>
                         <ng-template ngbPanelContent>
-                            <app-atlas-base-filter></app-atlas-base-filter>
+                            <app-atlas-base-filter [isAoristicAnalysis]="true"></app-atlas-base-filter>
                             <app-aggregated-filter *ngIf="filter.form.value['analysisType'] === ANALYSIS_TYPE.AGGREGATE"></app-aggregated-filter>
                             <app-atlas-individually-filter *ngIf="filter.form.value['analysisType'] === ANALYSIS_TYPE.INDIVIDUALLY"></app-atlas-individually-filter>
                         </ng-template>
