Replace 'app' prefix with 'qoli'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,9 +22,9 @@
     </button>
 </div>
 
-<app-atlas
+<qoli-atlas
     [showScore]="showScore"
     (openSidebar)="onOpenSidebar($event, MENU_ITEMS_IDS.FILTER)"
-></app-atlas>
+></qoli-atlas>
 
 <router-outlet></router-outlet>
